fixing back to menu visibility

--- a/mystyle.css
+++ b/mystyle.css
@@ -748,12 +748,6 @@ span.who-row {
   .back-to-menu{
     display: block !important;
     visibility: visible;
-     overflow-x: hidden;
-    -webkit-animation: fadein 15s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 15s; /* Firefox < 16 */
-        -ms-animation: fadein 15s; /* Internet Explorer */
-         -o-animation: fadein 15s; /* Opera < 12.1 */
-            animation: fadein 15s;
   }
 
   .contact .back-to-menu{
